complete detail box

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="map-container">
-                    <h4>Confirmed Cases of COVID-19 - <span id="lblCurrentDate"></span></h4>
+                    <h4>Confirmed Cases of COVID-19 - <span id="lblCurrentDate"></span>, 2020</h4>
                     <div id="map"></div>
                 </div>
                 <div class="slide-container">
@@ -91,24 +91,17 @@
                         </select>
                         <hr>
                         <h2 class="lblRegionName">Hubei</h2>
-                        <p>On <i>January 20</i>, <span class="lblRegionName">Hubei</span> had <b id="lblCases">258</b> confirmed cases of COVID-19, which accounted for <b id="lblPercent">X%</b> of the total cases in the world.</p>
-                        <img class="img-fluid img-thumbnail" src="https://placeimg.com/100/100">
+                        <p>On <span id="lblDetailsDate">January 20</span>, <span class="lblRegionName">Hubei</span> had <b id="lblCases">258</b> confirmed cases of COVID-19, which accounted for <b id="lblPercent">X%</b> of the total cases in the world.</p>
+                    </div>
+                    <hr>
+                    <div class="attribution-container">
+                        <p><b>MAP ATTRIBUTION</b></p>
+                        <p><a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> | Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> — Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors</p>
+                        <p>COVID-19 Data | <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports/" target="_blank">WHO Situation Reports</a>, <a href="https://github.com/globalcitizen/2019-wuhan-coronavirus-data" target="_blank">GlobalCitizen Wuhan Coronavirus Data</a></p>
                     </div>
                 </div>
             </div>
         </div>
-<hr>
-        <div class="row">
-            <div class="col-12">
-                <div class="attribution-container">
-                    <p><b>MAP ATTRIBUTION</b></p>
-                    <p><a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> | Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> — Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors</p>
-                    <p>COVID-19 Data | <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports/" target="_blank">WHO Situation Reports</a>, <a href="https://github.com/globalcitizen/2019-wuhan-coronavirus-data" target="_blank">GlobalCitizen Wuhan Coronavirus Data</a></p>
-                </div>
-            </div>
-
-        </div>
-
         <hr>
         <div class="row">
             <div class="col-md-8">
@@ -130,7 +123,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Leaflet -->
-
     <script src="lib/leaflet/leaflet.js"></script>
     <script src="js/map.js"></script>
 </body></html>
