--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>COVID-19</h1>
             <hr>
             <div class="subtitle">
-                <p>The spread of the Wuhan coronavirus</p>
+                <p>The spread of the novel coronavirus</p>
                 <p>Jan 20 - Feb 20, 2020</p>
             </div>
             <div id="byline" class="subtitle">
@@ -48,23 +48,21 @@
 
     <div class="container main">
         <div class="row">
-            <div class="col-md-2 my-auto text-center">
-                <img class="img-fluid img-thumbnail" src="https://placeimg.com/640/480/tech">
+            <div class="col-md-4 my-auto text-center">
+                <img class="img-fluid img-thumbnail" src="img/map.jpg">
             </div>
-            <div class="col-md-10">
-                <h4>Some heading</h4>
-                <p>(Doc turns around and spots a woman on a buckboard that's gone out of control. He jumps on his horse.) Great Scott! (he takes off after her) Git! (follows Doc) Hah! (Doc catches up with the woman and motions for her to jump onto his horse.) Jump!</p>
-                <p>(Hallway) (Marty runs out of the room and sees the elevator. He runs to it, just as 3-D, Match and Skinhead come out of it.) 3-Hey, get back here! Hey, hey! (Marty runs to the stairs and runs down them. The gang follows him. Marty switches to the other flight of stairs and climbs back up. Biff's cronies do not realize he's done this and carry on downwards. Marty, now back at the top of the stairs, goes out onto the roof. Biff enters. He sees the door to the roof closing and realizes where Marty is.)</p>
+            <div class="col-md-8">
+                <h4>The outbreak began in December 2019 in Wuhan...</h4>
+                <p>...the provincial capitol of Hubei, China, when Chinese authorities informed the World Health Organization of 44 mysterious cases of pneumonia.  The patients were quickly quarantined as health authorities worked to trace the origins of the illness.  The Chinese National Health Commission found that the Huanan Seafood Market in Wuhan was a  common link between most of the patients.  The market was immediately closed for disinfection. By January 7, researchers discovered that the illness was caused by a previously undiscovered coronavirus.</p>
+                <p>Coronaviruses are a large family of viruses that cause respiratory illnesses that can range from mild colds to severe illnesses like Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS).  The WHO named the newly discovered coronavirus SARS-CoV-2 and the disease it causes COVID-19.</p>
+                
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-8">
-                <p>Yes Marty, I know. (Doc’s Garage) (It’s a mess. Doc opens a book. ‘Hill Valley Telegraph Archives March 1st - April 30th 1973’. On the page he turns to is a headline – “Local Author Shot Dead.” We stay focused on the paper as Doc speaks.) (v.o) I went to the public library to try and make sense out of all the madness. The place was boarded up, shut down, so I broke in and borrowed some newspapers. I don't get it Doc, I mean how can this be happening? It's like we're in hell or something.</p>
-                <p>Look, a video game! I got it working. My dad told me about these. It is Wild Gunman. (He walks over to the game.) How do you play this thing? Let me show you kid. (He takes his hat off and throws it on top of the game.) I'm a crack shot at this.</p>
-            </div>
-            <div class="col-md-4 my-auto text-center">
-                <img class="img-fluid img-thumbnail" src="https://placeimg.com/300/150">
+            <div class="col-md-12">
+                <p>Despite early attempts to limit the disease with airport screenings and travel restrictions, COVID-19 began to spread throughout China as well as Thailand, Japan, and South Korea.  By January 20, 3 of the 282 patients with the disease had died, leading to President Xi Jinping’s announcement that the disease must be contained.  All travel to and from several cities in Hubei were banned.  The Chinese government took severe actions to stop the spread of the disease, including building temporary hospitals to treat patients in isolation.</p>
+                <p>The WHO began to publish daily situation reports on January 20th.  The interactive map below shows the number of confirmed cases of COVID-19 over the course of the first month of situation reports.  Clicking through the dates in the map, it is visually clear that the extreme efforts to contain the virus within Hubei Province have been partially successful - the majority of confirmed cases have remained there.</p>
             </div>
         </div>
         <hr>
@@ -104,12 +102,8 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-md-8">
-                <p>Yes Marty, I know. (Doc’s Garage) (It’s a mess. Doc opens a book. ‘Hill Valley Telegraph Archives March 1st - April 30th 1973’. On the page he turns to is a headline – “Local Author Shot Dead.” We stay focused on the paper as Doc speaks.) (v.o) I went to the public library to try and make sense out of all the madness. The place was boarded up, shut down, so I broke in and borrowed some newspapers. I don't get it Doc, I mean how can this be happening? It's like we're in hell or something.</p>
-                <p>Look, a video game! I got it working. My dad told me about these. It is Wild Gunman. (He walks over to the game.) How do you play this thing? Let me show you kid. (He takes his hat off and throws it on top of the game.) I'm a crack shot at this.</p>
-            </div>
-            <div class="col-md-4 my-auto text-center">
-                <img class="img-fluid img-thumbnail" src="https://placeimg.com/300/150">
+            <div class="col-md-12">
+                <p>While Chinese efforts to contain the virus have slowed it down, the disease has spread beyond its borders.  As of early March, there are large outbreaks in South Korea, Italy, and Iran and new cases are reported around the world daily.  With a mortality rate of roughly 2% (20 times that of the flu), it is important that COVID-19 is taken seriously.  Researchers are working on a vaccine, but in the meantime there are simple and familiar measures we as individuals can take to limit the spread of COVID-19 - wash your hands with soap and water frequently, cover your face when you cough, and stay home from work when you’re ill.</p>
             </div>
         </div>
 
