add article sources

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             </div>
             <div class="col-md-8">
                 <h4>The outbreak began in December 2019 in Wuhan...</h4>
-                <p>...the provincial capitol of Hubei, China, when Chinese authorities informed the World Health Organization of 44 mysterious cases of pneumonia.  The patients were quickly quarantined as health authorities worked to trace the origins of the illness.  The Chinese National Health Commission found that the Huanan Seafood Market in Wuhan was a  common link between most of the patients.  The market was immediately closed for disinfection. By January 7, researchers discovered that the illness was caused by a previously undiscovered coronavirus.</p>
-                <p>Coronaviruses are a large family of viruses that cause respiratory illnesses that can range from mild colds to severe illnesses like Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS).  The WHO named the newly discovered coronavirus SARS-CoV-2 and the disease it causes COVID-19.</p>
-                
+                <p>...the provincial capitol of Hubei, China, when Chinese authorities informed the World Health Organization of 44 mysterious cases of pneumonia. The patients were quickly quarantined as health authorities worked to trace the origins of the illness. The Chinese National Health Commission found that the Huanan Seafood Market in Wuhan was a common link between most of the patients. The market was immediately closed for disinfection. By January 7, researchers discovered that the illness was caused by a previously undiscovered coronavirus.</p>
+                <p>Coronaviruses are a large family of viruses that cause respiratory illnesses that can range from mild colds to severe illnesses like Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The WHO named the newly discovered coronavirus SARS-CoV-2 and the disease it causes COVID-19.</p>
+
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12">
-                <p>Despite early attempts to limit the disease with airport screenings and travel restrictions, COVID-19 began to spread throughout China as well as Thailand, Japan, and South Korea.  By January 20, 3 of the 282 patients with the disease had died, leading to President Xi Jinping’s announcement that the disease must be contained.  All travel to and from several cities in Hubei were banned.  The Chinese government took severe actions to stop the spread of the disease, including building temporary hospitals to treat patients in isolation.</p>
-                <p>The WHO began to publish daily situation reports on January 20th.  The interactive map below shows the number of confirmed cases of COVID-19 over the course of the first month of situation reports.  Clicking through the dates in the map, it is visually clear that the extreme efforts to contain the virus within Hubei Province have been partially successful - the majority of confirmed cases have remained there.</p>
+                <p>Despite early attempts to limit the disease with airport screenings and travel restrictions, COVID-19 began to spread throughout China as well as Thailand, Japan, and South Korea. By January 20, 3 of the 282 patients with the disease had died, leading to President Xi Jinping’s announcement that the disease must be contained. All travel to and from several cities in Hubei were banned. The Chinese government took severe actions to stop the spread of the disease, including building temporary hospitals to treat patients in isolation.</p>
+                <p>The WHO began to publish daily situation reports on January 20th. The interactive map below shows the number of confirmed cases of COVID-19 over the course of the first month of situation reports. Clicking through the dates in the map, it is visually clear that the extreme efforts to contain the virus within Hubei Province have been partially successful - the majority of confirmed cases have remained there.</p>
             </div>
         </div>
         <hr>
@@ -103,8 +103,20 @@
         <hr>
         <div class="row">
             <div class="col-md-12">
-                <p>While Chinese efforts to contain the virus have slowed it down, the disease has spread beyond its borders.  As of early March, there are large outbreaks in South Korea, Italy, and Iran and new cases are reported around the world daily.  With a mortality rate of roughly 2% (20 times that of the flu), it is important that COVID-19 is taken seriously.  Researchers are working on a vaccine, but in the meantime there are simple and familiar measures we as individuals can take to limit the spread of COVID-19 - wash your hands with soap and water frequently, cover your face when you cough, and stay home from work when you’re ill.</p>
+                <p>While Chinese efforts to contain the virus have slowed it down, the disease has spread beyond its borders. As of early March, there are large outbreaks in South Korea, Italy, and Iran and new cases are reported around the world daily. With a mortality rate of roughly 2% (20 times that of the flu), it is important that COVID-19 is taken seriously. Researchers are working on a vaccine, but in the meantime there are simple and familiar measures we as individuals can take to limit the spread of COVID-19 - wash your hands with soap and water frequently, cover your face when you cough, and stay home from work when you’re ill.</p>
             </div>
+        </div>
+        <hr>
+        <div class="attribution-container">
+            <p><b>Sources</b></p>
+            <p>WHO: <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019
+" target="_blank">Coronavirus disease (COVID-19) outbreak</a></p>
+            <p>devex: <a href="https://www.devex.com/news/covid-19-a-timeline-of-the-coronavirus-outbreak-96396" target="_blank">COVID-19 — a timeline of the coronavirus outbreak</a></p>
+            <p>Pharmaceutical Technology: <a href="https://www.pharmaceutical-technology.com/news/coronavirus-a-timeline-of-how-the-deadly-outbreak-evolved/" target="_blank">Coronavirus: A timeline of how the deadly Covid-19 outbreak is evolving</a></p>
+        </div>
+        <div class="attribution-container">
+            <p><b>Virus Image</b></p>
+            <p>Wikipedia: <a href="https://en.wikipedia.org/wiki/Severe_acute_respiratory_syndrome_coronavirus_2" target="_blank">Severe acute respiratory syndrome coronavirus 2</a></p>
         </div>
 
     </div>
