add gesture control

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
     <!-- Leaflet -->
     <script src="lib/leaflet/leaflet.js"></script>
 
+    <link rel="stylesheet" href="lib/gesture_handling/leaflet-gesture-handling.min.css" type="text/css">
+    <script src="lib/gesture_handling/leaflet-gesture-handling.min.js"></script>
+
     <script src="js/CustomControls.js"></script>
     <script src="js/map.js"></script>
-</body></html>
+</body>
+
+</html>
