add gesture control comment

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <!-- Leaflet -->
     <script src="lib/leaflet/leaflet.js"></script>
 
+    <!-- Gesture control by elmarquis https://github.com/elmarquis/Leaflet.GestureHandling -->
     <link rel="stylesheet" href="lib/gesture_handling/leaflet-gesture-handling.min.css" type="text/css">
     <script src="lib/gesture_handling/leaflet-gesture-handling.min.js"></script>
 
