add natural earth attribution

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             <p><b>Virus Image</b></p>
             <p>Wikipedia: <a href="https://en.wikipedia.org/wiki/Severe_acute_respiratory_syndrome_coronavirus_2" target="_blank">Severe acute respiratory syndrome coronavirus 2</a></p>
         </div>
+        
+        <div class="attribution-container">
+            <p><b>Wuhan Map</b></p>
+            <p>Map data by <a href="https://www.naturalearthdata.com/" target="_blank">Natural Earth</a></p>
+        </div>
 
     </div>
 
